Bug 103892 - [Chromium] Fix issue with hard coded error codes in quota error
Summary: [Chromium] Fix issue with hard coded error codes in quota error
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Erik Arvidsson
URL:
Keywords:
Depends on:
Blocks: 102726
  Show dependency treegraph
 
Reported: 2012-12-03 07:36 PST by Erik Arvidsson
Modified: 2012-12-03 12:30 PST (History)
9 users (show)

See Also:


Attachments
Patch (1.52 KB, patch)
2012-12-03 07:39 PST, Erik Arvidsson
fishd: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Arvidsson 2012-12-03 07:36:36 PST
[Chromium] Fix issue with hard coded error codes in quota error
Comment 1 Erik Arvidsson 2012-12-03 07:39:01 PST
Created attachment 177252 [details]
Patch
Comment 2 Erik Arvidsson 2012-12-03 07:45:49 PST
This is the first step to fix this.

Once this is in and a WebKit roll is done to Chrome, the next step is to use the enum names in Chrome instead of the hard coded values.

The last step is to then to have these enum values get their values from ExceptionCode.
Comment 3 WebKit Review Bot 2012-12-03 08:10:36 PST
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Comment 4 Darin Fisher (:fishd, Google) 2012-12-03 10:34:29 PST
Comment on attachment 177252 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=177252&action=review

> Source/WebKit/chromium/public/WebStorageQuotaError.h:39
> +    WebStorageQuotaErrorInvalidModification = 13,

Note:  Please be sure to update AssertMatchingEnums.cpp once there is a WebCore equivalent to these new enum values.
Comment 5 Erik Arvidsson 2012-12-03 11:05:33 PST
(In reply to comment #4)
> (From update of attachment 177252 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=177252&action=review
> 
> > Source/WebKit/chromium/public/WebStorageQuotaError.h:39
> > +    WebStorageQuotaErrorInvalidModification = 13,
> 
> Note:  Please be sure to update AssertMatchingEnums.cpp once there is a WebCore equivalent to these new enum values.

I added them now since the WebCore side has these already.
Comment 6 Erik Arvidsson 2012-12-03 11:08:18 PST
Committed r136419: <http://trac.webkit.org/changeset/136419>
Comment 7 Darin Fisher (:fishd, Google) 2012-12-03 12:30:52 PST
(In reply to comment #5)
> > Note:  Please be sure to update AssertMatchingEnums.cpp once there is a WebCore equivalent to these new enum values.
> 
> I added them now since the WebCore side has these already.

Cool, thanks.