[Chromium] Fix issue with hard coded error codes in quota error https://bugs.webkit.org/show_bug.cgi?id=103892

Reviewed by Darin Fisher.

Chromium currently hard codes the enum values for QuotaStatusCode. To fix
this we need to do a few iteration of changes. This is the first step and
it exposes the enums that Chromium depends on.

* public/WebStorageQuotaError.h:

Canonical link: https://commits.webkit.org/122010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136419 268f45cc-cd09-0410-ab3c-d52691b4dbfc